test/errors/uint64_neg1.ds

#OUTPUT
#Syntax Error: Negation invalid for this type.
# -> [13] uint64 x = -9
#
#END

#RET 0

extern func printf(s:str, ...)

func main -> int
    uint64 x = -9

    return 0
end

